--- a/零界点问题总结.md
+++ b/零界点问题总结.md
@@ -1,4 +1,4 @@
-# 零界点问题思考
+# 临界点问题思考
 背景：
 公司项目年度活动，需求如下：
 
@@ -58,7 +58,7 @@
 
 - 2.当项目中存在多线程时，要画一个线程 资源图，看是否会存在多线程处理统一资源问题，以及是否会造成并发问题
 
-- 3.对于某个零界点，要特别注意他前后相关的处理逻辑，在合适的情况下可以考虑做加减法。本例子中采用加法，对实时榜单进行一定延时。对于一些系统，比如秒杀，如果系统复杂，不能做到整整意义上的精确，可以考虑做一定的减法，或者加法，指定秒杀数量增多或者减少等等。。。。。
+- 3.对于某个临界点，要特别注意他前后相关的处理逻辑，在合适的情况下可以考虑做加减法。本例子中采用加法，对实时榜单进行一定延时。对于一些系统，比如秒杀，如果系统复杂，不能做到整整意义上的精确，可以考虑做一定的减法，或者加法，指定秒杀数量增多或者减少等等。。。。。
 
 
 
